# mc

./: .gitignore  AGENTS.md  Cargo.toml  dylint.toml  flake.nix
.agent/: napkin.md
crates/valence_lang/: build.rs
examples/: ctf.rs  survival_compat.rs
mc/: .gitignore  AGENTS.md  README.md  flake.nix
mc/.agent/: napkin.md
mc/.pi/: prompt-history.jsonl
mc/cairn-policy/: contracts.ncl  default.ncl
mc/compat/runner/: Cargo.toml  dylint.toml
mc/compat/runner/src/: backend_shell.rs  backend_shell_colocated_tests.rs  client_driver.rs  client_driver_colocated_tests.rs  config_colocated_tests.rs  config_patches.rs  entrypoint_boundary.rs  env_patch.rs  env_patch_baseline_colocated_tests.rs  evidence_bundle.rs  evidence_bundle_colocated_tests.rs  evidence_core.rs  evidence_core_colocated_tests.rs  evidence_receipts.rs  evidence_receipts_colocated_tests.rs  evidence_types.rs  import_boundary.rs  json_support.rs  layout.rs  lib.rs  main.rs  planning.rs  planning_colocated_tests.rs  receipt_validation.rs  receipt_validation_colocated_tests.rs  receipts.rs  receipts_colocated_tests.rs  runner_config.rs  runner_integration_tests.rs  runtime_config.rs  scenario_behavior_metadata.rs  scenario_catalog.rs  scenario_core.rs  scenario_core_colocated_tests.rs  scenario_families.rs  scenario_manifest_generated.rs  scenario_route.rs  test_support.rs  wire.rs  wire_colocated_tests.rs
mc/docs/: architecture.md  check-tiers.md  compat-instrumentation-boundary.md  configuration.md  crafting-recipe-behavior-card.md  crafting-recipe-selected-matrix-core.md  crafting-recipe-selected-matrix-data-fixture.md  crafting-recipe-selected-matrix-receipt-handoff.md  crafting-recipe-valence-shell-contract.md  evidence-workflow.md  furnace-smelting-behavior-card.md  furnace-smelting-selected-row-core.md  furnace-smelting-selected-row-data-fixture.md  furnace-smelting-selected-row-receipt-handoff.md  furnace-smelting-valence-runtime-shell.md  furnace-smelting-valence-shell-contract.md  hyperion-integration-boundaries.md  layout-checklist.md  minecraft-wiki-skill.md  next-cairn-target-skill.md  onixresearch-workspace-namespace.md  scenario-commands.generated.md  scenario-commands.md  scenario-derived-surfaces.md  upstream-byte-backed-protocol-audit.md  (+2 more)
mc/servers/valence/tools/packet_inspector/: Cargo.toml  README.md
mc/servers/valence/tools/packet_inspector/src/: capture.rs  lib.rs  main.rs  main_cli.rs
mc/tools/checkers/: Cargo.toml  README.md
mc/tools/checkers/src/: cli.rs  key_value.rs  lib.rs
mc/tools/checkers/src/checkers/: block_entity_sign_packet_family.rs  inventory_drag_transactions.rs  inventory_stack_split_merge.rs  scoreboard_team_packet_family.rs
scripts/: octet-check.sh  smoke-parkour.sh
src/: capture.rs  control.rs  main.rs  mcp.rs
(+3320 files in other folders)
