[package]
name = "packet_inspector"
description = "A simple Minecraft proxy for inspecting packets."
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[features]
default = ["gui"]
gui = [
    "dep:eframe",
    "dep:egui",
    "dep:egui_dock",
    "dep:image",
    "dep:itertools",
    "dep:syntect",
]
cli = []

[dependencies]
valence_protocol = { workspace = true, features = ["compression"] }
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
clap.workspace = true
flate2.workspace = true
flume.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
time = { workspace = true, features = ["local-offset"] }
image = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
eframe = { workspace = true, features = [
    "persistence",
    "wgpu",
], optional = true }
egui_dock = { workspace = true, features = ["serde"], optional = true }
itertools = { workspace = true, optional = true }
syntect = { workspace = true, default-features = false, features = [
    "default-fancy",
], optional = true }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
syn.workspace = true
anyhow.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
valence_build_utils.workspace = true
